--- a/equalizer.ui
+++ b/equalizer.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Equaliseur</string>
+   <string>Égaliseur</string>
   </property>
   <property name="windowIcon">
    <iconset resource="icons/icons.qrc">
@@ -37,7 +37,7 @@
        <item>
         <widget class="QCheckBox" name="equalizer_enable">
          <property name="toolTip">
-          <string>Activer ou désactiver l'équaliseur graphique</string>
+          <string>Activer ou désactiver l'égaliseur graphique</string>
          </property>
          <property name="text">
           <string>Activer</string>
@@ -57,7 +57,7 @@
        <item>
         <widget class="QComboBox" name="equalizer_preset">
          <property name="toolTip">
-          <string>Preset automatiques</string>
+          <string>Pré-réglages</string>
          </property>
         </widget>
        </item>
@@ -124,7 +124,7 @@
          <item>
           <widget class="QLabel" name="label">
            <property name="text">
-            <string>Pré ampli</string>
+            <string>Pré-ampli</string>
            </property>
            <property name="alignment">
             <set>Qt::AlignCenter</set>
