Gui connect 2/3 done

--- a/about.ui
+++ b/about.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>about_dialog</class>
- <widget class="QDialog" name="about_dialog">
+ <class>AboutDialog</class>
+ <widget class="QDialog" name="AboutDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -54,7 +54,7 @@
   <connection>
    <sender>action_close</sender>
    <signal>clicked()</signal>
-   <receiver>about_dialog</receiver>
+   <receiver>AboutDialog</receiver>
    <slot>close()</slot>
    <hints>
     <hint type="sourcelabel">
