--- a/database_cleanup.ui
+++ b/database_cleanup.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>DatabaseUpdateDialog</class>
- <widget class="QDialog" name="DatabaseUpdateDialog">
+ <class>DatabaseCleanupDialog</class>
+ <widget class="QDialog" name="DatabaseCleanupDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
