--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1312,7 +1312,7 @@
  <connections>
   <connection>
    <sender>action_exit</sender>
-   <signal>activated()</signal>
+   <signal>triggered()</signal>
    <receiver>MainWindow</receiver>
    <slot>close()</slot>
    <hints>
